Fix XSS vulnerability
Application title, element title and layerset title were subject to a
XSS vulnerability during delete dialog preparation.

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/deleteLayerset.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/deleteLayerset.html.twig
@@ -1,4 +1,4 @@
-{% set layerset_title = layerset.title %}
+{% set layerset_title = layerset.title|e %}
 {% set layerset_id = layerset.id %}
 
 {% block manager_content %}
